--- a/r-code/01_data_preparation_climate_quality.rmd
+++ b/r-code/01_data_preparation_climate_quality.rmd
@@ -1,7 +1,7 @@
 ---
 title: "AirTemperature and Precipitation in SouthTyrol | Data Availability and Quality"
 author: "Johannes Brenner"
-date: "25. Juni 2015"
+date: "17. Juli 2015"
 output: html_document
 runtime: shiny
 ---
@@ -72,7 +72,7 @@ if(!require(d3heatmap))
 
 ####Where are the climate stations?
 
-Below one can get an impression of the density of the South Tyrolean meteo network for air temperature. Here available stations providing daily data are shown, high elevation stations with larger radius. An even more dense network could be achieved by adding so far missing stations for which no postprocessing is provided in the Province's data base (e.g. 10min - hourly data).
+Below one can get an impression of the density of the South Tyrolean meteo network for air temperature. Here available stations providing daily data are shown, high elevation stations are shown in darker grey. The station you choose to discover is marked within a red circle.
 
 ```{r, echo=FALSE}
 # read geographic information
@@ -87,10 +87,44 @@ Below one can get an impression of the density of the South Tyrolean meteo netwo
 data(st_Tmax)
 st_Tmax <- st_Tmax
 
-renderLeaflet({leaflet() %>%
+data(st_N)
+st_N <- st_N
+
+st_Tmax <- st_Tmax[order(st_Tmax$HOEHE),]
+
+renderLeaflet({
+  col <- grey.colors(n = length(st_Tmax$long), start=.5, end=0)
+  namesST <- paste("st", st_Tmax$NUMMER, sep="")
+  colIT <- which(namesST==input$station)
+  col[colIT] <- "#bd0026"
+  
+  rad <- rep(5, length(st_Tmax$long))
+  rad[colIT] <- 10
+  
+  leaflet() %>%
    addProviderTiles("Acetate.terrain") %>%
    addTiles(options = providerTileOptions(opacity = 0.75)) %>%  # Add default OpenStreetMap map tiles
-   addCircleMarkers(lng=st_Tmax$long, lat=st_Tmax$lat, popup=paste(st_Tmax$NUMMER, st_Tmax$STATION_D, ", ",  st_Tmax$HOEHE, "m a.s.l"), radius = st_Tmax$HOEHE/100)})
+   addCircleMarkers(lng=st_Tmax$long, lat=st_Tmax$lat, popup=paste(st_Tmax$NUMMER, st_Tmax$STATION_D, ", ",  st_Tmax$HOEHE, "m a.s.l"), color = col, radius=rad, fill = F, group = "Air Temperature") %>%
+    addCircleMarkers(lng=st_N$long, lat=st_N$lat, popup=paste(st_N$NUMMER, st_N$STATION_D, ", ",  st_N$HOEHE, "m a.s.l"), radius=2.3, fill = F, group = "Precipitation") %>%
+    addLayersControl(overlayGroups = c("Air Temperature", "Precipitation"),
+    options = layersControlOptions(collapsed = FALSE)
+  )
+  })
+
+inputPanel(
+   selectInput(inputId = "station", label = "discover data from station", choices = names(T_N_southtyrol))
+)
+
+
+```
+
+
+```{r, echo=FALSE}
+
+# from DataBseAlpEnv lib
+data(T_N_ST)
+T_N_southtyrol <- T_N_southtyrol
+
 ```
 
 ***
@@ -101,7 +135,7 @@ A short summary table on data quality is provided for the whole data set. Below 
 
 * _SufficientObsPeriod_:    Has time series a consecutive length longer than 20 years? [TRUE=1]
 * _#ConsecutiveYears_:      How long is the consecutive time series [YEARs]?
-* _SufficientNAqual_:       Has the consecutive time series less than specified percent of NA values?
+* _SufficientNAqual_:       Has the consecutive time series less than specified percentage of NA values?
 * _%NAs4consecutiveYears_:  Percent of NAs in consecutive time series.
 * _#NAs4consecutiveYears_:  Sum of NAs in consecutive time series.
 
@@ -111,7 +145,7 @@ renderDataTable({
     if (input$variable=="Mean daily air temperature") {var <- "LT_Tmean"} else {var <- "N_1440"}
     if(input$interpolation=="only raw time series") interpol = F else interpol = T
     
-  df <- sapply(X = TN_ST_tmean, FUN = function(x, interpol){
+  df <- sapply(X = T_N_southtyrol, FUN = function(x, interpol){
       
     if (any(dimnames(x)[[2]] == var)) {  
       
@@ -159,12 +193,13 @@ renderDataTable({
 }, options = list(pageLength=5, lengthMenu=c(5, 10, 15, 20, 50, 100)))
 ```
 
-Define thresholds for high quality time series:
+Choose a variable you want to discover and define thresholds for high quality time series for the summary table above:
 
 ```{r, echo=FALSE, warning=FALSE}
 
 inputPanel(
-  sliderInput(inputId = "NrYears", label = "Number of consecutive years", min = 1, max = 30, value = 20, step = c(1:30)),
+  radioButtons(inputId = "variable", label = "discover", choices = c("Mean daily air temperature","Daily precipitation sums"), selected = "Mean daily air temperature", inline = FALSE),
+  sliderInput(inputId = "NrYears", label = "Number of consecutive years", min = 1, max = 35, value = 30, step = c(1:35)),
    sliderInput(inputId = "NApercent", label = "Percentage of NAs", min = 0, max = 25, value = 10, step = c(1:25))
 )
 
@@ -173,39 +208,10 @@ inputPanel(
 
 ***
 
-```{r, echo=FALSE}
-# read data from file
-
-# TN_ST <- dB_readZRX2station(files = files, write_csv = T, output_path = "/run/user/1000/gvfs/smb-share:server=abz02fst.eurac.edu,share=alpenv/Projekte/HiResAlp/06_Workspace/BrJ/02_data/WISKI/SouthTyrol/csv/dailyData/", do.hourly = F, do.quality = F, chron = T, multivar = F)
-
-# compute T_mean where missing
-# 
-# TN_ST_tmean <- lapply(TN_ST, function(x) {
-#   if (any(names(x) == "LT_Tmean") | !(any(names(x) == "LT_Tmin") & any(names(x) == "LT_Tmax"))) {
-#     return(x)
-#   } else {
-#       x$LT_Tmean <- (x[,"LT_Tmax"] + x[,"LT_Tmin"]) / 2
-#       return(x)
-#   }
-#   })
-
-# from DataBseAlpEnv lib
-data(TN_ST_tmean)
-TN_ST_tmean <- TN_ST_tmean
-# choose station
-
-inputPanel(
-   selectInput(inputId = "station", label = "discover data from station", choices = names(TN_ST_tmean)),
-   radioButtons(inputId = "variable", label = "discover", choices = c("Mean daily air temperature","Daily precipitation sums"), selected = "Mean daily air temperature", inline = FALSE)
-)
-
-```
-
-***
-
 ####Which months do have an adequate data quality?
 
-As for statistical downscaling a time series of at least 20 years is necessary the more general question to ask is: For how many years good quality data is available for the specific station? The heatmap below gives an answer for the choosen station (highlighting of rows and colomns as well as zooming is provided). Moreover, this option is changing the results of the summary table and the heatmap accordingly. Instead of the raw data sets, now the interpolated data sets are used for calculations.
+As for statistical downscaling a time series of at least 20 years is necessary the more general question to ask is: For how many years good quality data is available for the specific station? The heatmap below gives an answer for the choosen station. For each month the percentage of days the choosen variable was measured are shown. 
+Highlighting of rows and colomns as well as zooming is provided.
 
 ***
 
@@ -213,10 +219,10 @@ As for statistical downscaling a time series of at least 20 years is necessary t
 
 renderD3heatmap({
   if (input$variable=="Mean daily air temperature") {var <- "LT_Tmean"} else {var <- "N_1440"}
-  if(input$interpolation=="only raw time series") data <- TN_ST_tmean[[input$station]][,var]
+  if(input$interpolation=="only raw time series") data <- T_N_southtyrol[[input$station]][,var]
   if(input$interpolation=="add interpolated time series")
   {
-    data <- TN_ST_tmean[[input$station]][,var]
+    data <- T_N_southtyrol[[input$station]][,var]
     LT_Tmean_interpol <- na.spline(object = data,  na.rm = F, maxgap = input$maxgap)
     data <-  LT_Tmean_interpol
    }
@@ -225,7 +231,8 @@ data_perc <- aggregate(x = data, by = as.yearmon(time(data)), FUN = function(x) 
   y <- sum(!is.na(x)) / length(x) *100
   y <- round(y,0)
 })
-data_perc <- matrix(c(coredata(data_perc),rep(NA,6)), ncol=12, byrow = T, dimnames = list(1990:2015,month.abb))
+data_perc <- matrix(c(coredata(data_perc),rep(NA,6)), ncol=12, byrow = T)
+dimnames(data_perc) <- list((2015-nrow(data_perc)+1):2015,month.abb)
 
 d3heatmap(data_perc, scale = "none", colors = "RdYlBu", dendrogram = "none", na.rm = T)
 })
@@ -236,7 +243,7 @@ d3heatmap(data_perc, scale = "none", colors = "RdYlBu", dendrogram = "none", na.
 
 ####How does the series look in detail?
 
-Looking to the series of mean temperature in detail gives you a guess if interpolation of values can help to create sufficent data quality. If you choose _add interpolated time series_ the time series is interpolated with a spline methodology. You can adjust the maximum number of consecutive NAs to fill. Zooming the graph or adding a rolling mean (left bottom corner) to better discover the time series is provided.
+Looking to the series of mean temperature in detail gives you a guess if interpolation of values can help to create sufficent data quality. If you choose _add interpolated time series_ the time series is interpolated with a spline methodology. You can adjust the maximum number of consecutive NAs to fill. Zooming the graph or adding a rolling mean (left bottom corner) to better discover the time series is provided. Moreover, this option is changing the results of the summary table and the heatmap accordingly. Instead of the raw data sets, now the interpolated data sets are used for calculations.
 
 ```{r, echo=FALSE, warning=FALSE}
 inputPanel(
@@ -251,10 +258,10 @@ renderDygraph({
       var <- "N_1440"
       unit <- "mm per day"
     }
-  if(input$interpolation=="only raw time series") data <- TN_ST_tmean[[input$station]][,var]
+  if(input$interpolation=="only raw time series") data <- T_N_southtyrol[[input$station]][,var]
   if(input$interpolation=="add interpolated time series") 
   {
-    data <- TN_ST_tmean[[input$station]][,var]
+    data <- T_N_southtyrol[[input$station]][,var]
     LT_Tmean_interpol <- na.spline(object = data,  na.rm = F, maxgap = input$maxgap)
     data <- merge(LT_Tmean_interpol,data)
     names(data) <- c("MeanAirTemp_SplineInterpol","MeanAirTemp")
